import-picture-panel : IE10 CSS fix for input text with text-align:right

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
-
+::-ms-clear {
+  display: none;
+}
 
 body {
   background: radial-gradient(circle, #000, #373737);
